--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
+outputs_dir/*
 # C extensions
 *.so
-
+checkpoints/*
 # Distribution / packaging
 .Python
 build/
@@ -160,3 +160,18 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+.venv/
+#added by dvc so git will not track data
+# data/
+# /data
+
+.dvc/config
+/evaluation_results
+#/predictions
+data
+.venv/*
+
+__pycache__/
+*.pyc
+DS_Store
