--- a/configs/benchmark/benchmark_bird.yaml
+++ b/configs/benchmark/benchmark_bird.yaml
@@ -5,7 +5,7 @@ defaults:
 
 model_name: "vit_tiny_patch16_224"  # default model name
 pretrained: true
-batch_sizes: [1, 8]
+batch_sizes: [1, 8,16,32,64,128,256,512,1024, 2048]
 num_iterations: 10
 input_size: 224
 accelerator:: 'auto'
@@ -17,6 +17,6 @@ num_classes: 200
 api:
   server_url: "http://localhost:8000/predict"
   test_image_url: "https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/beignets-task-guide.png"
-  concurrency_levels: [1, 8]
+  concurrency_levels: [1, 8,16,32,64,128,256,512,1024, 2048]
   num_requests: 100
 
